@@ -238,7 +238,9 @@ glibc (2.3.2-1) unstable; urgency=low
 
   * Ben Collins <bcollins@debian.org>
     - debian/contron.in/sparc64: Remove the superflous (and incorrect) dep on
-    gcc-3.2 for libc6-dev-sparc64.
+      gcc-3.2 for libc6-dev-sparc64.
+    - Use CC for building sparc64 libs.
+    - Remove build-dep for gcc-3.3 on sparc.
 
  -- GOTO Masanori <gotom@debian.or.jp>  Sun, 23 Mar 2003 02:39:58 +0900
 
